实现注册、登录以及忘记密码。

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.1",
     "element-plus": "^2.2.27",
     "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.0.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
